# rtosim

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindOpenSim.cmake  FindOsens.cmake  FindViconSDK.cmake  RTOSIMConfig.cmake.in  cmake_uninstall.cmake.in
data/InverseKinematics/: subject01_walk1_ik_test.mot
data/ViconNexus/: S01.mp  S01.vsk  walking_1.Trial.enf  walking_1.c3d  walking_1.system  walking_1.x1d  walking_1.xcp
examples/: CMakeLists.txt
examples/exampleViconNexus/: CMakeLists.txt  mainExampleViconNexus.cpp
lib/: CMakeLists.txt
lib/Common/: CMakeLists.txt  ExternalForceData.cpp  ExternalForceProperties.cpp  ExternalLoadProperties.cpp  FlowControl.cpp  GeneralisedCoordinatesData.cpp  MarkerData.cpp  TimeDifference.cpp
lib/Common/rtosim/: Common.h  EndOfData.h  ExternalForceData.h  ExternalForceProperties.h  ExternalLoadProperties.h  FlowControl.h  GeneralisedCoordinatesData.h  MarkerData.h  QueueData.h  QueuesSync.h  TimeDifference.h
lib/Common/rtosim/queue/: EmgQueue.h  ExternalTorquesQueue.h  GeneralisedCoordinatesQueue.h  MarkerSetQueue.h  MultipleExternalForcesQueue.h  OrientationSetQueue.h  QueueData.h  ScalarVectorQueue.h  SingleExternalForceQueue.h
lib/Concurrency/: CMakeLists.txt  Latch.cpp
lib/Concurrency/rtosim/concurrency/: Concurrency.h  Latch.h  Queue.cpp  Queue.h
lib/InputDevice/: CMakeLists.txt  DataFromMR3.cpp  DataFromNexus.cpp  ExternalForcesFromStorageFile.cpp  ExternalForcesFromX.cpp  GeneralisedCoordinatesFromStorageFile.cpp  GeneralisedCoordinatesFromX.cpp  MarkersFromTrc.cpp  OrientationsFromMR3.cpp  OrientationsFromMobile.cpp  OrientationsFromMot.cpp
lib/InputDevice/rtosim/: DataFromMR3.h  DataFromNexus.h  ExternalForcesFromStorageFile.h  ExternalForcesFromX.h  GeneralisedCoordinatesFromStorageFile.h  GeneralisedCoordinatesFromX.h  InputDevice.h  MarkersFromTrc.h  OrientationsFromMR3.h  OrientationsFromMobile.h  OrientationsFromMot.h
lib/InverseDynamics/: CMakeLists.txt  ExternalForceFromQueue.cpp  JointContactFromOpensim.cpp  QueueToXForces.cpp  QueuesToInverseDynamics.cpp
lib/InverseDynamics/rtosim/: ExternalForceFromQueue.h  InverseDynamics.h  JointContactFromOpensim.h  QueueToXForces.h  QueuesToInverseDynamics.h
lib/InverseKinematics/: CMakeLists.txt  IKFromQueue.cpp  IKSequencer.cpp  IKSolverParallel.cpp  IKoutputs.cpp  JobsCreator.cpp  MarkersReferenceFromQueue.cpp  QueueToInverseKinametics.cpp  QueueToInverseKinematics.cpp  ThreadPoolJobs.cpp  TimeSequence.cpp
lib/InverseKinematics/rtosim/: IKFromQueue.h  IKSequencer.h  IKSolverParallel.h  IKoutputs.h  InverseKinematics.h  JobsCreator.h  MarkersReferenceFromQueue.h  QueueToInverseKinametics.h  QueueToInverseKinematics.h  ThreadPoolJobs.h  TimeSequence.h
lib/InverseKinematicsOsens/: CMakeLists.txt  IKSequencer.cpp  IKSolverParallelOsens.cpp  JobsCreatorOsens.cpp  OrientationSensorsReferenceFromQueue.cpp  QueueToInverseKinematicsOsens.cpp  ThreadPoolJobs.cpp
lib/InverseKinematicsOsens/rtosim/: IKSequencer.h  IKSolverParallelOsens.h  IKoutputs.h  InverseKinematics.h  InverseKinematicsOsens.h  JobsCreatorOsens.h  OrientationSensorsReferenceFromQueue.h  QueueToInverseKinematicsOsens.h  ThreadPoolJobs.h  TimeSequence.h
lib/OutputDevice/: CMakeLists.txt  FileLogger.cpp  FrameCounter.cpp  QueueToFileLogger.cpp  StateVisualiser.cpp  TimeDifference.cpp  TimeProbe.cpp
lib/OutputDevice/rtosim/: FileLogger.h  FrameCounter.h  OutputDevice.h  QueueToFileLogger.h  StateVisualiser.h  TimeDifference.h  TimeProbe.h
lib/RTosim/: CMakeLists.txt
lib/RTosim/rtosim/: rtosim.h
lib/SignalProcessing/: AdaptiveCop.cpp  CMakeLists.txt  ExternalForceDataFilterStateSpace.cpp  GeneralisedCoordinatesStateSpace.cpp  MultipleExternalForcesDataFilterStateSpace.cpp  QueueAdapter.cpp  SignalProcessingCommon.cpp
lib/SignalProcessing/Filter/: Filter.cpp  Polynomial.cpp  StateSpaceFilter.cpp  TransferFunction.cpp
lib/SignalProcessing/rtosim/: AdaptiveCop.h  ExternalForceDataFilterStateSpace.h  GeneralisedCoordinatesStateSpace.h  MultipleExternalForcesDataFilterStateSpace.h  QueueAdapter.h  SignalProcessing.h  SignalProcessingCommon.h
lib/SignalProcessing/rtosim/Filter/: Designer.h  Filter.h  Polynomial.h  StateSpaceFilter.h  TransferFunction.h
lib/Utilities/: CMakeLists.txt  FileSystem.cpp  Mapper.cpp  OsimUtilities.cpp  ProgramOptionsParser.cpp  StopWatch.cpp
lib/Utilities/rtosim/: ArrayConverter.h  FileSystem.h  Mapper.h  OsimUtilities.h  ProgramOptionsParser.h  StopWatch.h  Utilities.h
lib/rtosim/: CMakeLists.txt
lib/rtosim/rtosim/: rtosim.h
sandbox/: CMakeLists.txt
src/: CMakeLists.txt  compareStorageFiles.cpp  mainFromMR3toFile.cpp  mainInverseDynamics.cpp  mainInverseDynamicsfromFile.cpp  mainInverseKinameticsInverseDynamics.cpp  mainInverseKinameticsInverseDynamicsFromFile.cpp  mainInverseKinematics.cpp  mainInverseKinematicsFromFile.cpp  mainInverseKinematicsInverseDynamicsFromFile.cpp  mainInverseKinematicsInverseDynamicsFromNexus.cpp  mainInverseKinematicsOsensFromFile.cpp  mainInverseKinematicsOsensFromMobile.cpp  mainRTOsensFromMobile.cpp  mainTestDataFromMR3.cpp  mainTestDataFromMR3toOsim.cpp  mainTestOsens.cpp  mainTestOsensFromMobileToQueque.cpp  mainTestOsensFromMobileToQueue.cpp
testdata/models/: 2392_scaled_clusters.osim
testdata/setup/walking/: externalLoads.xml  externalLoads_nexus.xml  id_setup.xml  ik_setup.xml  ik_taskset.xml
tests/: CMakeLists.txt  testDependencies.cpp  testFileSystem.cpp  testFilter.cpp  testInputDevice.cpp  testOpenSimSandbox.cpp  testTimeDifference.cpp
tests/testInverseKinematics/: CMakeLists.txt  mainTestInverseKinematics.cpp
